# webapp-single-cylinder-scattering-2D

./: 2D-Scattering.code-workspace  LICENSE_APACHE  LICENSE_MIT  Makefile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.githooks/: pre-commit
scattering-core/: Cargo.toml  LICENSE_MIT  bessel_generator.py
scattering-core/benches/: field_benchmark.rs
scattering-core/src/: bessel.rs  debug_bessel.rs  field.rs  lib.rs  performance_testing.rs  scattering.rs
scattering-core/tests/: bessel_validation.rs
src/: App.css  App.tsx  index.css
src/components/: CylinderControls.css  CylinderControls.tsx  FieldVisualization.css  FieldVisualization.tsx  ScatteringCanvas.tsx
src/hooks/: useScattering.ts
src/types/: cylinder.ts  index.ts  scattering-core.d.ts
