[package]
name = "scattering-core"
version = "0.1.0"
authors = ["Sean Gorsky <gorskysd@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]


[dependencies]
wasm-bindgen = "0.2.84"
num-complex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }

# Better panic messages in debug mode
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
serde_json = "1.0"
criterion = { version = "0.8", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true

[[bench]]
name = "field_benchmark"
harness = false